# age-plugin-trezor

./: Cargo.toml  run.sh
src/: main.rs
